{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 46,
  "lineage": "272b69d2-2512-9aa2-48d8-6329ef30865b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727940474452:vpc/vpc-0845cc5563d94e681",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-03a743f0cb06f7b72",
            "default_route_table_id": "rtb-0402f38c6c2c5244a",
            "default_security_group_id": "sg-056306798bf242f39",
            "dhcp_options_id": "dopt-01e658896d65fbaac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0845cc5563d94e681",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0402f38c6c2c5244a",
            "owner_id": "727940474452"
          }
        }
      ]
    },
    {
      "module": "module.nginx-instance-1[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c53cb2507dda8ae",
            "arn": "arn:aws:ec2:us-east-1:727940474452:instance/i-0fda6ae7196b52106",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-047075a9d1b15bc78",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fda6ae7196b52106",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "galsekey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08d19771f3ad44d1c",
            "private_dns": "ip-172-31-9-206.ec2.internal",
            "private_ip": "172.31.9.206",
            "public_dns": "ec2-3-236-161-252.compute-1.amazonaws.com",
            "public_ip": "3.236.161.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08a38811ea319630f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nginx-server-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbdd316ab29c4f15",
            "tags": {
              "Name": "nginx-0",
              "Owner": "Gal Segal",
              "Purpose": "nginx server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "nginx-0",
              "Owner": "Gal Segal",
              "Purpose": "nginx server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e4ce0c1974a57b9"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_ami.aws-linux",
            "module.nginx-sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.nginx-instance-1[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c53cb2507dda8ae",
            "arn": "arn:aws:ec2:us-east-1:727940474452:instance/i-00e792fc6d246509d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0086ef08ff31c9811",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e792fc6d246509d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "galsekey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa7f69a15e25d30c",
            "private_dns": "ip-172-31-1-228.ec2.internal",
            "private_ip": "172.31.1.228",
            "public_dns": "ec2-3-238-188-161.compute-1.amazonaws.com",
            "public_ip": "3.238.188.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04e70e63858fddcb3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nginx-server-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbdd316ab29c4f15",
            "tags": {
              "Name": "nginx-1",
              "Owner": "Gal Segal",
              "Purpose": "nginx server",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "nginx-1",
              "Owner": "Gal Segal",
              "Purpose": "nginx server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02e4ce0c1974a57b9"
            ]
          },
          "dependencies": [
            "data.aws_ami.aws-linux",
            "module.nginx-sg.aws_security_group.security_group",
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.nginx-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:727940474452:security-group/sg-02e4ce0c1974a57b9",
            "description": "allow ssh,http",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e4ce0c1974a57b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-server-sg",
            "name_prefix": "",
            "owner_id": "727940474452",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http-ssh",
              "Owner": "Gal",
              "Purpuse": "SG for NGINX"
            },
            "tags_all": {
              "Name": "allow_http-ssh",
              "Owner": "Gal",
              "Purpuse": "SG for NGINX"
            },
            "timeouts": null,
            "vpc_id": "vpc-0845cc5563d94e681"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.sg-rule-in-1",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-2210090605",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e4ce0c1974a57b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.nginx-sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.sg-rule-in-2",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-892408792",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e4ce0c1974a57b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.nginx-sg.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.sg-rule-out",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3182184679",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02e4ce0c1974a57b9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "module.nginx-sg.aws_security_group.security_group"
          ]
        }
      ]
    }
  ]
}